--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <version>2.8.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
 
